added join newsletter route

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@getbrevo/brevo": "^2.2.0",
+    "@vercel/node": "^3.2.23",
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
